--- a/Practicals/Practical_2/doc/TP02.tex
+++ b/Practicals/Practical_2/doc/TP02.tex
@@ -53,7 +53,7 @@ If everything is going well, you can compile and run the executable and get a co
 	\caption{The UV of a image}
 \end{figure}
 
-The UV of a image is simply the coordinate of an image. An image have always UV between 0 and 1. As an example, an image with 1024 pixel on x and 2048 pixels on y get this U and V values: if $U = 0.25$, $X = 128$ and if $V = 0.25$, $Y = 512$.
+The UV of an image is simply the coordinate of an image. An image have always UV between 0 and 1. As an example, an image with 1024 pixel on x and 2048 pixels on y get this U and V values: if $U = 0.25$, $X = 256$ and if $V = 0.25$, $Y = 512$.
 
 \section{GPU texture creation}
 On the last practical we use a buffer to store some particles and show them on screen. This time our buffer will store each pixel on the image. On the Content struct you can see that the texture\_ item has replace the buffer\_ one. For the moment this handle is set to 0. On the kFragmentSource you can see that we draw the uv coordinate if the texture isn't valid.\\
@@ -97,7 +97,7 @@ Because we specify nullptr on the last parameter, the texture will be initialize
 \end{figure}
 
 \section{The fractal compute shader}
-In the same way you did in the practical 1. Create a new compute shader for the fractal generation named kComputeFractalSource.
+In the same way you did in the practical 1. Create a new compute shader (fractal\_compute\_shader) for the fractal generation and it's source named kComputeFractalSource. You need to create the program kernel\_compute\_fractal\_ in the content struct, attach the shader and link the program.
 The binding of the texture can be done like this:
 \begin{lstlisting}
 	  layout(rgba32f, binding=0) uniform image2D texture_fractal;
@@ -106,7 +106,7 @@ We can use the feature of a 2D layout for the organization of our threads:
 \begin{lstlisting}
 	 layout(local_size_x = 8, local_size_y = 8, local_size_z = 1) in;
 \end{lstlisting}
-The value 8 was chosen to keep all shader invocations of a bloc inside a warp (8x8=32 threads). Finally, read and write on the texture can be done using imageLoad and imageStore. We can use the main function to show all the local invocation shader:
+The value 8 was chosen to keep all shader invocations of a bloc inside a warp (8x8=64 threads). Finally, read and write on the texture can be done using imageLoad and imageStore. We can use the main function to show all the local invocation shader:
 \begin{lstlisting}
 void main() {
 	ivec2 coord = ivec2(gl_GlobalInvocationID.xy);
@@ -118,7 +118,7 @@ void main() {
 \end{lstlisting}
 On the CPU side we can use the program and the texture like on the first practical. The dispatch function will set 128 on Y too:
 \begin{lstlisting}
-glUseProgram(content.kernel_compute_blur_);
+glUseProgram(content.kernel_compute_fractal_);
 glBindTexture(GL_TEXTURE_2D, content.texture_);
 glBindImageTexture(
   0, content.texture_, 0, GL_FALSE, 0, GL_WRITE_ONLY, GL_RGBA32F);
@@ -154,8 +154,8 @@ We can run the equation $(1)$ while the result don't diverge. We consider a comp
 \begin{lstlisting}
 	float iteration_max = 42.0;
 	float iteration = 0.0;
-	while (z.modulus() < 2 && iteration <= iteration_max) {
-		z = z*z + c;
+	while (length(z) < 2 && iteration <= iteration_max) {
+		z = ComplexeMul(z, z) + c;
 		++iteration;
 	}
 \end{lstlisting}
