--- a/Practicals/Practical_marked/doc/TP_marked.tex
+++ b/Practicals/Practical_marked/doc/TP_marked.tex
@@ -49,7 +49,7 @@ Si tout se passe correctement vous devriez voir une image représentant un diagr
 
 \subsection{Modalité d'évaluation}
 Le TP se déroule sur deux séances. C'est une illustration d'un cas réel que l'on peut rencontrer dans l'industrie. Le TP est donc volontairement très long et de difficulté croissante ce qui permet d'obtenir aisément la moyenne.\\
-Le rendu de TP doit être fait avant le 08 mars 2021 sous la forme d'un fichier zip contenant les fichiers suivant :
+Le rendu de TP doit être fait à cette adresse mail (robinfaurypro@gmail.com) avant le 08 mars 2021 sous la forme d'un fichier zip contenant les fichiers suivant :
 \begin{itemize}
 	\item Tous fichier sources ainsi que le CMakeLists si vous l'avez modifié. (Le dossier de build ne doit pas être rendu)
 	\item Un compte rendu du TP où vous expliquerez les algorithmes que vous avez mis en place. Certain algorithme ne sont pas parallélisables et donc pas adaptable sur GPU. Il faudra aussi discuter de ces traitements dans le rapport.
